syntax = "proto3";

package request;

import "account/fields/account-email-field.proto";

option java_multiple_files = true;
option java_package = "grpc.account.dto.request";

message CheckAccountByEmailRequest {
  fields.AccountEmailField account_email = 1;
}