syntax = "proto3";

package response;

option java_multiple_files = true;
option java_package = "grpc.account.v2.dto.response";

message AccountResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
  string status = 5;
  string createdTime = 6;
}